// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OtherIncomeCard renders fields for an OtherIncome instance 1`] = `
<Fragment>
  <InputChoiceGroup
    choices={
      Array [
        Object {
          "checked": false,
          "label": "Workers Compensation",
          "value": "Workers Compensation",
        },
        Object {
          "checked": false,
          "label": "Unemployment Insurance",
          "value": "Unemployment Insurance",
        },
        Object {
          "checked": false,
          "label": "Social Security Disability Insurance",
          "value": "SSDI",
        },
        Object {
          "checked": false,
          "label": "Disability benefits under a governmental retirement plan",
          "value": "Disability benefits under Gov't retirement plan",
        },
        Object {
          "checked": false,
          "label": "Jones Act benefits",
          "value": "Jones Act benefits",
        },
        Object {
          "checked": false,
          "label": "Railroad Retirement benefits",
          "value": "Railroad Retirement benefits",
        },
        Object {
          "checked": false,
          "label": "Earnings or benefits from another employer, or through self-employment",
          "value": "Earnings from another employment/self-employment",
        },
      ]
    }
    label="What kind of income is it?"
    name="other_incomes[0].income_type"
    onChange={[Function]}
    smallLabel={true}
    type="radio"
    value=""
  />
  <InputDate
    dayLabel="Day"
    example="mm / dd / yyyy"
    label="What is the first day of your leave that this income will pay you for?"
    monthLabel="Month"
    name="other_incomes[0].income_start_date"
    onChange={[Function]}
    smallLabel={true}
    value=""
    yearLabel="Year"
  />
  <InputDate
    dayLabel="Day"
    example="mm / dd / yyyy"
    label="What is the last day of your leave that this income will pay you for?"
    monthLabel="Month"
    name="other_incomes[0].income_end_date"
    onChange={[Function]}
    smallLabel={true}
    value=""
    yearLabel="Year"
  />
  <Fieldset>
    <FormLabel
      component="legend"
      optionalText="(optional)"
      small={true}
    >
      How much will you receive?
    </FormLabel>
    <InputCurrency
      formGroupClassName="margin-top-05"
      label="Amount"
      labelClassName="text-normal margin-top-0"
      name="other_incomes[0].income_amount_dollars"
      onChange={[Function]}
      smallLabel={true}
      value={null}
      width="medium"
    />
    <Dropdown
      choices={
        Array [
          Object {
            "label": "Daily",
            "value": "Per Day",
          },
          Object {
            "label": "Weekly",
            "value": "Per Week",
          },
          Object {
            "label": "Monthly",
            "value": "Per Month",
          },
          Object {
            "label": "All at once",
            "value": "In Total",
          },
        ]
      }
      formGroupClassName="margin-top-1"
      label="Frequency"
      labelClassName="text-normal margin-top-0"
      name="other_incomes[0].income_amount_frequency"
      onChange={[Function]}
      smallLabel={true}
      value=""
    />
  </Fieldset>
</Fragment>
`;

exports[`OtherIncomesDetails when the user's claim has no other incomes renders the page 1`] = `
<QuestionPage
  onSave={[Function]}
  title="Other leave, income, and benefits"
>
  <Heading
    level="2"
    size="1"
  >
    Tell us about your other sources of income during your leave dates for paid leave.
  </Heading>
  <LeaveDatesAlert
    endDate="2021-06-01"
    headingLevel="3"
    startDate="2021-01-01"
  />
  <RepeatableFieldset
    addButtonLabel="Add another income"
    entries={
      Array [
        OtherIncome {
          "income_amount_dollars": null,
          "income_amount_frequency": null,
          "income_end_date": null,
          "income_start_date": null,
          "income_type": null,
          "other_income_id": null,
        },
      ]
    }
    headingPrefix="Income"
    limit={3}
    limitMessage="You can only add up to 3 incomes"
    onAddClick={[Function]}
    onRemoveClick={[Function]}
    removeButtonLabel="Remove income"
    render={[Function]}
  />
</QuestionPage>
`;

exports[`OtherIncomesDetails when the user's claim has other incomes renders the page 1`] = `
<QuestionPage
  onSave={[Function]}
  title="Other leave, income, and benefits"
>
  <Heading
    level="2"
    size="1"
  >
    Tell us about your other sources of income during your leave dates for paid leave.
  </Heading>
  <LeaveDatesAlert
    endDate="2021-06-01"
    headingLevel="3"
    startDate="2021-01-01"
  />
  <RepeatableFieldset
    addButtonLabel="Add another income"
    entries={
      Array [
        OtherIncome {
          "income_amount_dollars": 500,
          "income_amount_frequency": "Per Week",
          "income_end_date": "2021-02-01",
          "income_start_date": "2021-01-01",
          "income_type": "Unemployment Insurance",
          "other_income_id": null,
        },
        OtherIncome {
          "income_amount_dollars": 700,
          "income_amount_frequency": "Per Month",
          "income_end_date": "2021-02-05",
          "income_start_date": "2021-01-05",
          "income_type": "Jones Act benefits",
          "other_income_id": null,
        },
      ]
    }
    headingPrefix="Income"
    limit={3}
    limitMessage="You can only add up to 3 incomes"
    onAddClick={[Function]}
    onRemoveClick={[Function]}
    removeButtonLabel="Remove income"
    render={[Function]}
  />
</QuestionPage>
`;
